feat(*): update web site and integrate github api

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                         <ul class="nav navbar-nav">
                             <li><a href="#accueil" class="nav-item">Accueil</a></li>
                             <li><a href="#profil" class="nav-item">Profil</a></li>
-                            <li><a href="#formation" class="nav-item">Formation</a></li>
-                            <li><a href="#projets" class="nav-item">Réalisation</a></li>
+                            <li><a href="#formation" class="nav-item">Parcours</a></li>
+                            <li><a href="#projets" class="nav-item">Réalisations</a></li>
                             <li><a href="#contact" class="nav-item">Contact</a></li>
                         </ul>
                     </div>
@@ -73,14 +73,11 @@
                     <h1 class="banner-title">Mochel Anthony</h1>
                     <h2 class="banner-subtitle">Etudiant en développement informatique</h2>
                     <div>
-                        <a class="btn button-social btn-lg" href="https://github.com/tonybloc" target="_blank">
-                            <i class="fa fa-github fa-1g" aria-hidden="true"></i> Github
+                        <a class="btn button-social btn-sm" href="https://github.com/tonybloc" target="_blank">
+                            <i class="fa fa-github fa-lg" aria-hidden="true"></i> Github
                         </a>
-                        <a class="btn button-social btn-lg" href="https://www.linkedin.com/in/mochel-anthony" target="_blank">
-                            <i class="fa fa-linkedin fa-1g" aria-hidden="true"></i> Linkedin
-                        </a>
-                        <a class="btn button-social btn-lg" href="https://gitlab.com/TonyMochel" target="_blank">
-                            <i class="fa fa-gitlab fa-1g" aria-hidden="true"></i> GitLab
+                        <a class="btn button-social btn-sm" href="https://www.linkedin.com/in/mochel-anthony" target="_blank">
+                            <i class="fa fa-linkedin fa-lg" aria-hidden="true"></i> Linkedin
                         </a>
                     </div>
                 </div>
@@ -91,16 +88,19 @@
         <section id="profil">
             <h3>Qui suis-je?</h3>
             <div class="container" id="about-me">
-                <div class="row">
+                <div class="row" >
                     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-                        <img src="./img/profil-2016.jpg" class="profil img-responsive" alt="profil">
+                        <img src="./img/profil-2018.jpg" class="profil img-responsive" alt="profil">
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
                         <div>
-                            <h3>MOCHEL Anthony, 22 ans</h3>
+                            <h3>MOCHEL Anthony, 23 ans</h3>
                             <h4>Etudiant en Informatique</h4>
                             <p>
-                                Passionné par la programmation et les nouvelles technologies, j'aime découvrir et apprendre au fur et à mesure de projets que j'entreprends. Ces pour cela que j'ai conçus ce site web, il me permettra de vous présenter l'ensemble des projets personnels comme professionnels que j'ai réalisés. Se site web fera office de CV en ligne</p>
+                                Passionné par la programmation et les nouvelles technologies, j'aime découvrir et apprendre au fur et à mesure des projets que j'entreprends. Ce site web me permettra de vous présenter l'ensemble de projets mes personnels (uniquement ceux qui sont accessibles publiquement via Github &#128521;). 
+                            </br>
+                                Je réalise en se moment une formation d'ingénieur en informatique, en alternance, conduite par l'ITII Alsace et l'EI CNAM de Strasbourg
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -122,9 +122,9 @@
                                 <p>En préparation</p>
                             </div>
                             <div class="graduation-content">
-                                <p class="graduation-title">ITII - Ingénieur Informatique</p>
-                                <p class="graduation-school">Centre de formation (CFAI), Strasbourg</p>
-                                <p class="graduation-description">Formation en alternance. En paternaria avec le Concervatoir National des Arts et Métier - CNAM du Grand Est</p>
+                                <p class="graduation-title">Ingénieur en informatique</p>
+                                <p class="graduation-school">Pôle de formation UIMM Alsace, Strasbourg</p>
+                                <p class="graduation-description">Formation en alternance, suivie par l’ITII d'Alsace en partenariat avec l'EI CNAM de Strasbourg</p>
                             </div>
                         </div>
                         <div class="graduation">
@@ -135,7 +135,7 @@
                                 <p>2016-2018</p>
                             </div>
                             <div class="graduation-content">
-                                <p class="graduation-title">BTS Services Informatiques Aux Organisations</p>
+                                <p class="graduation-title">BTS Services Informatiques aux Organisations</p>
                                 <p class="graduation-school">Lycée René Cassin, Strasbourg</p>
                                 <p class="graduation-description">Spécialité : Solutions Logicielles et Applications Métiers (SLAM)</p>
                             </div>
@@ -164,9 +164,17 @@
                                 <p>2018-2021</p>
                             </div>
                             <div class="graduation-content">
-                                <p class="graduation-title">Talent Business Solution - Eckbolsheim (67)</p>
-                                <p class="graduation-school">Stage en alternance</p>
-                                <p class="graduation-description">Consultant / Developpeur</p>
+                                <p class="graduation-title">Talent Business Solution</p>
+                                <p class="graduation-school">Apprentissage, Eckbolsheim (67)</p>
+                                <p class="graduation-description">Développement et maintenance de plusieurs applications web et mobiles pour des clients de la société.
+                                    <ul>
+                                        <li>Développement et maintenance d’un système de caisses certifié NF525.</li>
+                                        <li>Création d’applications de gestion d'entrepôts sur des périphériques mobiles Windows SE.</li>
+                                        <li>Création d’une application mobile pour les supporters de clubs de sport.</li>
+                                        <li>Développement et paramétrage de web service dans l’ERP Microsoft Dynamics NAV.</li>
+                                        <li>Création et maintenance de sites e-commerce.</li>
+                                    </ul>
+                                </p>
                             </div>
                         </div>
                         <div class="graduation">
@@ -177,9 +185,9 @@
                                 <p>Janvier 2018</p>
                             </div>
                             <div class="graduation-content">
-                                <p class="graduation-title">Viwametal - Oswald (67)</p>
-                                <p class="graduation-school">Stage 2ème année BTS</p>
-                                <p class="graduation-description">Développement PHP - Refonte du dashboard de l'entreprise.</p>
+                                <p class="graduation-title">Viwametal</p>
+                                <p class="graduation-school">Stage de BTS, Oswald (67)</p>
+                                <p class="graduation-description">Refonte du tableau de bord de l'entreprise.</p>
                             </div>
                         </div>
                         <div class="graduation">
@@ -190,9 +198,9 @@
                                 <p>Juin 2017</p>
                             </div>
                             <div class="graduation-content">
-                                <p class="graduation-title">Electricté de Strasbourg - Mundolsheim (67)</p>
-                                <p class="graduation-school">Stage 1ère année BTS</p>
-                                <p class="graduation-description">Développement PHP - Automatisation du traitement des indicateurs trimestriels de performance des prestataires TMA.</p>
+                                <p class="graduation-title">Électricité de Strasbourg</p>
+                                <p class="graduation-school">Stage de BTS, Mundolsheim (67)</p>
+                                <p class="graduation-description">Automatisation du traitement des indicateurs trimestriels de performance des prestataires TMA.</p>
                             </div>
                         </div>
                         <div class="graduation">
@@ -203,8 +211,8 @@
                                 <p>Juillet 2016</p>
                             </div>
                             <div class="graduation-content">
-                                <p class="graduation-title">Electricté de Strasbourg - Mundolsheim (67)</p>
-                                <p class="graduation-school">Emploi saisonnier</p>
+                                <p class="graduation-title">Électricité de Strasbourg</p>
+                                <p class="graduation-school">Emploi saisonnier, Mundolsheim (67)</p>
                                 <p class="graduation-description">Archivage et classement de documents</p>
                             </div>
                         </div>
@@ -214,93 +222,12 @@
         </section>
 
         <!-- Projets -->
-        <section id="projets">
+        <section>
             <h3>Mes Réalisations</h3>
             <div class="container">
-                <div class="row">
-                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-                        <div class="myProjet" data-toggle="modal" data-target="#projet_web">
-                            <img class="image_projet img-responsive" src="./img/projet_web.png"/>
-                            <div class="overlay">
-                                <div class="text">
-                                    <h4 class="projet_title">tonymochel.top</h4>
-                                    <p class="projet_subtitle">Développement de mon portfolio</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="modal fade" id="projet_web" role="dialog">
-                            <div class="vertical-alignment-helper">
-                                <div class="modal-dialog vertical-align-center">
-                                    <!-- Modal content-->
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                            <h4 class="modal-title">Portfolio</h4>
-                                        </div>
-                                        <div class="modal-body">
-                                            <div class="modal-description">
-                                                <h4 class="modal-subtitle">Technologie utilisé</h4>
-                                                <p>Framework Bootstrap 3 : pour le résponsive du site et certains composants (navigation, modal, annimation, ...).</p>
-                                                <p>Framework JQuery : pour la validation des champs de saisie.</p>
-                                                <p>Langage informatique : HTML, CSS, PHP.</p>
-                                                </p>
-                                                <h4 class="modal-subtitle">Déscription du projet</h4>
-                                                <p>
-                                                    Le site "tonymochel.top" regroupe l'ensemble des projets que j'ai réalisés.
-                                                    Le site fait office de portfolio (CV en ligne).
-                                                </p>
-                                            </div>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">Quitter</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-                        <div class="myProjet" data-toggle="modal" data-target="#projet_aden">
-                            <img class="image_projet img-responsive" src="./img/projet_aden.png"/>
-                            <div class="overlay">
-                                <div class="text">
-                                    <h4 class="projet_title">Projet ADEN</h4>
-                                    <p class="projet_subtitle">Développement PHP</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="modal fade" id="projet_aden" role="dialog">
-                            <div class="vertical-alignment-helper">
-                                <div class="modal-dialog vertical-align-center">
-                                    <!-- Modal content-->
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                            <h4 class="modal-title">Projet Aden</h4>
-                                        </div>
-                                        <div class="modal-body">
-                                            <div class="modal-description">
-                                                <h4 class="modal-subtitle">Technologie utilisé</h4>
-                                                <p>Framework Materialize : Pour la mise en forme de l'application.</p>
-                                                <p>Framework JQuery : Pour la validation des champs de saisie.</p>
-                                                <p>Langage informatique : HTML, CSS, PHP, JS, SQL.</p>
-                                                </p>
-                                                <h4 class="modal-subtitle">Déscription du projet</h4>
-                                                <p>
-                                                    Mon rôle consistait à développer une interface d'administration Web permettant au responsable du  CDEV  d'évaluer mensuellement le travail des prestataires de la TMA.
-                                                    Les agents du services CDEV et les autres services informatiques peuvent, à l'aide de formulaires en ligne, répondre à l'enquête d'évaluation du travail des prestataires.
-                                                    Inversement, les prestataires de la TMA peuvent évaluer la collaboration et la qualité des données fournies par les agents d'Electrictié de Strasbourg lors des prestations effectuées.
-                                                </p>
-                                            </div>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">Quitter</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div id="project-loader"></div>
+                <div class="row" id="projects">
+                    
                 </div>
             </div>
         </section>
@@ -309,11 +236,11 @@
         <section id="contact">
             <h3>Me contacter</h3>
             <div class="container">
-                <div class="row">
+                <div class="row justify-content-md-center">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4"></div>
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                         <!-- Location -->
                         <div class="category_contact" >
-                            <h3 class="category-title">Coordonnées</h3>
                             <div class="category_content">
                                 <address class="adresse">
                                     <div class="adr-category">
@@ -328,6 +255,7 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4"></div>
                 </div>
             </div>
         </section>
@@ -336,7 +264,7 @@
         <footer>
             <section class="pre_footer">
                 <div class="container">
-                    <p>Mochel Anthony, dernière modification le 27/03/2019</p>
+                    <p>Mochel Anthony, dernière modification le 19/04/2021</p>
                 </div>
             </section>
         </footer>
@@ -352,7 +280,10 @@
         <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-app.js"></script>
         <!-- Firebase products SDKs that you want to use -->
         <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-analytics.js"></script>
+        <!-- markdown parser -->
+        <script src="https://cdn.jsdelivr.net/npm/remarkable@2.0.1/dist/cjs/index.min.js"></script>
 
         <script src="asset/script/navigation.js"></script>
+        <script src="asset/script/github.js"></script>
     </body>
 </html>
